--- a/main.tex
+++ b/main.tex
@@ -22,6 +22,7 @@
 % Tikz:
 \usepackage{tikz}
 \usetikzlibrary{arrows,shapes,positioning,babel}
+\usepackage{circuitikz}
 \usepackage{pgfplots}
 \pgfplotsset{compat=1.18}
 \usepackage{array}
