--- a/05_ecuaciones_diferenciales_en_diferencias/plots/5-circuito_step.tex
+++ b/05_ecuaciones_diferenciales_en_diferencias/plots/5-circuito_step.tex
@@ -1,11 +1,21 @@
-\begin{tikzpicture}[scale=0.6, transform shape]
-    \draw (0,0) node[anchor=north west] {$V_{in}$};
-    \draw (0,0) node[anchor=north east] {$V_{out}$};
-    \draw (0,0) node[anchor=south west] {$V_{in}$};
-    \draw (0,0) node[anchor=south east] {$V_{out}$};
-    \draw (0,0) node[anchor=north] {$R$};
-    \draw (0,0) node[anchor=south] {$R$};
-    \draw (0,0) node[anchor=east] {$L$};
-    \draw (0,0) node[anchor=west] {$L$};
-    \draw (0,0) node[anchor=center] {$\omega_0$};
-\end{tikzpicture}
+\begin{circuitikz}[scale=0.8, transform shape, american voltages]
+    \draw
+    (0,0) to [american current source, l^=$i(t)$] (0,4)
+    to (2,4)
+    to [R, l^={\parbox{1.2cm}{
+        \begin{center}
+            $R_1$ \\ $100\;\Omega$    
+        \end{center}
+        }}] (2,0)
+    to (0,0) ;
+    \draw (2, 4) to [R, l_={$R_2$}] (6,4)
+    to [L, l_={\parbox{1.2cm}{
+        \begin{center}
+            $L_1$ \\ $50\;\mu\mathrm{H}$    
+        \end{center}
+        }}, v^=$v_L(t)$] (6,0)
+    to (2,0) ;
+
+    \draw[->, thick] (3.3, 4.5) -- (4.6, 4.5);
+    \node at (3.9, 4.8) {$i_1(t)$};
+\end{circuitikz}
