--- a/05_ecuaciones_diferenciales_en_diferencias/plots/5-corriente_wave.tex
+++ b/05_ecuaciones_diferenciales_en_diferencias/plots/5-corriente_wave.tex
@@ -1,3 +1,35 @@
-\begin{tikzpicture}
-    
+\begin{tikzpicture}[scale=0.7,transform shape]
+    \begin{axis}[
+    	axis y line=center,
+    	axis x line=middle,
+    	xlabel=$t$,ylabel=$x(t)$,
+    	xmin=-1.4,xmax=3.9,
+    	ymin=-0.6,ymax=2.9,
+		xtick={0,1,2,3},
+		xticklabels={0, $\frac{T_1}{3}$,$\frac{2T_1}{3}$,$T_1$},
+    	xticklabel style = {xshift=5},
+    	yticklabel style = {yshift=5},
+    	]
+    	\addplot[
+    	black,
+    	ultra thick
+    	] coordinates {
+    	    (0,0) (0,1) (1,1) (1,2)
+    	    (2,2) (2,1) (3,1) (3,0)
+    	};
+		\addplot[
+    	black,
+    	thick,
+		dashed
+    	] coordinates {
+    	    (1,1) (1,0)
+    	};
+		\addplot[
+    	black,
+    	thick,
+		dashed
+    	] coordinates {
+    	    (2,1) (2,0)
+    	};
+    \end{axis}
 \end{tikzpicture}
