--- a/06_muestreo/plots/5-2bis.tex
+++ b/06_muestreo/plots/5-2bis.tex
@@ -15,10 +15,10 @@
             (-4,0) (-2.5,1.5) (-2.5,0) 
             (2.5,0) (2.5,1.5) (4,0)
         } ;
-        \node at (-4,-.5) {$-\omega_b$};
-        \node at (-2.5,-.5) {$-\omega_a$};
-        \node at (4,-.5) {$\omega_b$};
-        \node at (2.5,-.5) {$\omega_a$};
+        \node at (-4,-.5) {$-\omega_2$};
+        \node at (-2.5,-.5) {$-\omega_1$};
+        \node at (4,-.5) {$\omega_2$};
+        \node at (2.5,-.5) {$\omega_1$};
         \node at (0.15,1.5) {$\mathbf{-}1$} ;
     \end{axis}
     \end{tikzpicture}
